meting controller fix / wrm tf doet locations raar?
