# yembis_backend/API.Model/AddLocations.cs
@@ -1,0 +1,11 @@
+﻿using yembis_backend.Models;
+
+namespace yembis_backend.API.Model
+{
+    public class AddLocations
+    {
+
+        public List<Location> Locations { get; set; }
+
+    }
+}
