# yembis_backend/API.Model/AddMetingen.cs
@@ -1,0 +1,11 @@
+﻿using yembis_backend.Models;
+
+namespace yembis_backend.API.Model
+{
+    public class AddMetingen
+    {
+      
+
+        public List<Meting> Metings { get; set; }
+    }
+}
